--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -6,15 +6,23 @@
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
   version="4.0"
   metadata-complete="true">
-
+  
   <servlet>
     <servlet-name>First</servlet-name>
     <servlet-class>FirstServlet</servlet-class>	
+  </servlet>
+  <servlet>
+    <servlet-name>Second</servlet-name>
+    <servlet-class>SecondServlet</servlet-class>	
   </servlet>
   
   <servlet-mapping>
 	<servlet-name>First</servlet-name>
     <url-pattern>/welcome</url-pattern>	
+  </servlet-mapping>
+   <servlet-mapping>
+	<servlet-name>Second</servlet-name>
+    <url-pattern>/sec</url-pattern>	
   </servlet-mapping>
 
 </web-app>
